--- a/src/App/App.css
+++ b/src/App/App.css
@@ -4,9 +4,9 @@ body{
   background-color: rgba(0, 0, 0, 0.575);
 
 }
-.App{
+.app{
   display: flex;
   flex-direction: column;
-
+  background-color: rgba(14, 3, 63, 0.856);
   
 }
