--- a/src/ChallengeDetailsCard/ChallengeDetailsCard.css
+++ b/src/ChallengeDetailsCard/ChallengeDetailsCard.css
@@ -1,23 +1,29 @@
-.DCC{
+.details-card-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content:center;
     flex-grow: 1;
     padding: 10px;
-    box-shadow: 0 1px 3px rgba(15, 15, 15, 0.12) 0 1px 2px rgba(0,0,0,0.27);
-    
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
 
+.details-card-container > p {
+    margin: 0;
 }
-.DCC :hover {
-    box-shadow: 0 14px 20px rgba(15, 15, 15, 0.12) 0 10px 10px rgba(0,0,0,0.27);
-}
-.CN{
-    font-size:15px;
-    margin-bottom: -15px;
 
+.details-card-container:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-.CV{
+
+.card-name {
+    font-size: 15px;
+    /* padding-top: 16px; */
+    margin-bottom: -15px !important;
+}
+
+.card-value {
     font-size: 50px;
     font-weight: 800;
     margin: 0;
