--- a/src/ChallengeSection/ChallengeSection.css
+++ b/src/ChallengeSection/ChallengeSection.css
@@ -1,13 +1,14 @@
-.CSC{
-    background-color: rgba(8, 1, 43, 0.904);
+.challenge-section-container {
     min-height: 90vh;
     flex-direction: column;
     align-items: center;
-    
-    
+    margin: 24px 0;
 }
-.CSH{
+
+.challenge-section-header {
     text-align: center;
     color: #fbf6fb;
-    font-family: Pattaya,sans-serif;
+    font-family: "Bangers", cursive;
+    font-size: 64px;
+    letter-spacing: 4px;
 }
