--- a/src/TestContainer/TestContainer.css
+++ b/src/TestContainer/TestContainer.css
@@ -1,17 +1,23 @@
-.TC{
-    background-color: antiquewhite;
+.test-container {
+    background-color: #ffffff;
     margin: 64px 0;
-    width:80%;
-    min-height: 750px;
-    display: flex;
     margin-left: 10%;
+    width: 80%;
+    min-height: 700px;
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    box-shadow: 0 1px 3px rgba(15, 15, 15, 0.12) 0 1px 2px rgba(0,0,0,0.27); 
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-.TAC
-{
+
+.typing-challenge-cont {
+    display: flex;
     flex-grow: 1;
-    display:flex ;
+}
+
+.try-again-cont {
+    flex-grow: 1;
+    display: flex;
     flex-direction: column;
     justify-content: center;
 }
