--- a/src/Tryagain/Tryagain.css
+++ b/src/Tryagain/Tryagain.css
@@ -1,47 +1,64 @@
-.TAC{
+.try-again-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.TAC>h1>b{
+
+.try-again-container > h1 {
     text-decoration: underline;
-    font-size: 36px;
     margin: 0;
+    font-size: 36px;
     margin-bottom: 20px;
 }
-.RC>p{
-    font-size: 20px;
+
+.result-container > p {
+    font-size: 28px;
     margin: 7px;
 }
-.button{
+
+.end-buttons {
     position: relative;
     margin: 12px;
     border: none;
     border-radius: 4px;
-    min-width: 64px;
     padding: 2px 16px;
+    min-width: 64px;
     vertical-align: middle;
-    color: azure;
-    box-shadow: 0 1px 3px rgba(15, 15, 15, 0.12) 0 1px 2px rgba(0,0,0,0.27);
+    text-align: center;
+    color: #fff;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     font-size: 18px;
     font-weight: 500;
     line-height: 36px;
     cursor: pointer;
     transition: background-color 0.2s;
 }
-.share{
-    background-color: rgb(48, 48, 196);
+
+.start-again-btn {
+    background: #3e4248;
 }
-.retry{
-    background-color: rgb(75, 69, 69);
+
+.start-again-btn:hover,
+.start-again-btn:focus {
+    background: #808080;
 }
-.retry:hover,.retry:focus{
-    background-color: rgb(36, 31, 31);
+
+.share-btn {
+    background: #3b5998;
 }
-.share:hover,.share:focus{
-    background-color: rgb(70, 70, 255);
+
+.share-btn:hover,
+.share-btn:focus {
+    background: #5d7dc4;
 }
-i{
-    margin-right: 6px;
+
+.tweet-btn {
+    background: #1da1f2;
+}
+
+.tweet-btn:hover,
+.tweet-btn:focus {
+    background: #8faef3;
 }
