--- a/src/TypingChallengeContainer/TypingChallengeContainer.css
+++ b/src/TypingChallengeContainer/TypingChallengeContainer.css
@@ -1,12 +1,16 @@
-.TCC{
+.typing-challenge-container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-
 }
-.DC{
+
+.details-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    
+}
+
+.typewriter-container {
+    display: flex;
+    flex-grow: 1;
 }
